--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,6 +4,7 @@
 :root {
   font-family: Inter, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+  --ui-container: 2000px;
 }
 @supports (font-variation-settings: normal) {
   :root { font-family: InterVariable, sans-serif; }
@@ -19,14 +20,24 @@ body {
 }
 header {
     height: 70px;
+    display: flex;
+    justify-content: end;
 }
 h1 {
     font-weight: 800;
     font-size: 80px;
-    letter-spacing: -6px;
+    letter-spacing: -4px;
     line-height: 5rem;
 }
-nav {
+h3 {
+  font-weight: 600;
+}
+hr {
+  line-height: 2rem;
+  margin: 24px;
+  color: #5de7f1;
+}
+.lhs {
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -36,12 +47,17 @@ nav {
 .rhs {
     flex-grow: 2;
 }
-.container {
+.blue-container {
     display: flex;
     justify-content: stretch;
+    align-items: stretch;
     flex-direction: row;
     border-radius: 60px;
     background: linear-gradient(to right bottom, #030C3F , #03607C );
-    margin: 0 20px;
     padding: 30px;
+    height: 100%;
+}
+p, ul, li {
+    line-height: 1.75rem;
+    font-size: 1.2rem;
 }
