--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,16 +2,16 @@
 @import "@nuxt/ui";
 
 :root {
-  font-family: Inter, sans-serif;
+  font-family: Outfit, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
   --ui-container: 2000px;
 }
 @supports (font-variation-settings: normal) {
-  :root { font-family: InterVariable, sans-serif; }
+  :root { font-family: Outfit, sans-serif; }
 }
 
 @theme {
-  --font-sans: 'InterVariable', sans-serif;
+  --font-sans: 'Outfit', sans-serif;
 }
 html, body {
     min-height: 100%;
@@ -32,10 +32,10 @@ header {
     justify-content: end;
 }
 h1 {
-    font-weight: 800;
-    font-size: 80px;
-    letter-spacing: -4px;
-    line-height: 5rem;
+    font-weight: 900;
+    font-size: 90px;
+    letter-spacing: -3px;
+    line-height: 6.5rem;
 }
 h3 {
   font-weight: 600;
