--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,6 @@ h1 {
     font-size: 90px;
     letter-spacing: -3px;
     line-height: 6.5rem;
-    
     @media (max-width: 1023px) { /* lg */
       font-size: 48px;
       letter-spacing: 0px;
@@ -56,7 +55,6 @@ h2 {
   font-weight: 700;
   font-size: 42px;
   line-height: 2.75rem;
-  
     @media (max-width: 1023px) { /* lg */
       font-size: 30px;
       letter-spacing: 0px;
@@ -115,6 +113,24 @@ P {
       font-size: 14px;
       line-height: 1.2rem;
     }
+
+    a {
+    background:
+      linear-gradient(
+        to bottom,
+        white 0%,
+        white 100%
+      );
+    background-position: 0 100%;
+    background-repeat: repeat-x;
+    background-size: 2px 2px;
+    text-decoration: none;
+    transition: all .3s ease-in-out;
+    &:hover {
+      color: #030C3F;
+      background-size: 2px 50px;
+    }
+  }
 }
 blockquote {
   padding: 0 10px;
