--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,24 +113,6 @@ P {
       font-size: 14px;
       line-height: 1.2rem;
     }
-
-    a {
-    background:
-      linear-gradient(
-        to bottom,
-        white 0%,
-        white 100%
-      );
-    background-position: 0 100%;
-    background-repeat: repeat-x;
-    background-size: 2px 2px;
-    text-decoration: none;
-    transition: all .3s ease-in-out;
-    &:hover {
-      color: #030C3F;
-      background-size: 2px 50px;
-    }
-  }
 }
 blockquote {
   padding: 0 10px;
@@ -139,4 +121,22 @@ blockquote p {
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
+}
+a {
+  background:
+    linear-gradient(
+      to bottom,
+      white 0%,
+      white 100%
+    );
+  background-position: 0 100%;
+  background-repeat: repeat-x;
+  background-size: 2px 2px;
+  background-clip: content-box;
+  text-decoration: none;
+  transition: all .3s ease-in-out;
+  &:hover {
+    color: #030C3F;
+    background-size: 2px 50px;
+  }
 }
