--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,6 +5,7 @@
   font-family: Outfit, sans-serif;
   font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
   --ui-container: 2000px;
+  --ui-primary: white;
 }
 @supports (font-variation-settings: normal) {
   :root { font-family: Outfit, sans-serif; }
@@ -94,6 +95,24 @@ hr {
     background: linear-gradient(to right bottom, #030C3F , #03607C );
     padding: 30px;
     height: 100%;
+    a:not(.ingore-link-animations) {
+  background:
+    linear-gradient(
+      to bottom,
+      white 0%,
+      white 100%
+    );
+  background-position: 0 100%;
+  background-repeat: repeat-x;
+  background-size: 2px 2px;
+  background-clip: content-box;
+  text-decoration: none;
+  transition: all .3s ease-in-out;
+  &:hover {
+    color: #030C3F;
+    background-size: 2px 50px;
+  }
+}
 }
 p, ul, li {
     line-height: 1.75rem;
@@ -121,22 +140,4 @@ blockquote p {
   font-size: 16px;
   font-weight: 400;
   font-style: italic;
-}
-a {
-  background:
-    linear-gradient(
-      to bottom,
-      white 0%,
-      white 100%
-    );
-  background-position: 0 100%;
-  background-repeat: repeat-x;
-  background-size: 2px 2px;
-  background-clip: content-box;
-  text-decoration: none;
-  transition: all .3s ease-in-out;
-  &:hover {
-    color: #030C3F;
-    background-size: 2px 50px;
-  }
 }
